--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@trpc/server": "^10.5.0",
     "add": "^2.0.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "zod": "^3.20.2"
   }
