--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
+    "prisma": "^4.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "@trpc/server": "^10.5.0",
     "add": "^2.0.6",
     "cors": "^2.8.5",
