feat: todo base.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Avenir",
+        "datetime",
+        "superjson",
         "tailwindcss",
         "trpc",
         "TRPC",
