--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,44 +1,24 @@
 {
-  "name": "vite-vue-template",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@trpc/client": "^10.5.0",
-    "@trpc/server": "^10.5.0",
-    "@vueuse/core": "^8.6.0",
-    "vue": "^3.2.25"
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.61",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/compiler-sfc": "^3.2.37",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.17.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-tailwindcss": "^3.5.2",
-    "eslint-plugin-vue": "^9.1.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.0",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.3",
-    "typescript": "^4.5.4",
-    "unplugin-icons": "^0.14.3",
-    "unplugin-vue-components": "^0.19.6",
-    "vite": "^2.9.9",
-    "vue-eslint-parser": "^9.0.3",
-    "vue-tsc": "^0.34.7"
+    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/server": "^10.7.0",
+    "@tsconfig/svelte": "^3.0.0",
+    "superjson": "^1.12.1",
+    "svelte": "^3.54.0",
+    "svelte-check": "^2.10.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
